removes line height to fix header overlap

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,7 +10,6 @@ body {
 	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
-	line-height: 1.575em;
 	width: 100%;
 }
 
